--- a/src/components/navHeader.scss
+++ b/src/components/navHeader.scss
@@ -1,16 +1,89 @@
 .color-nav {
     background-color: white;
     color: black;
+    }
     
-}
-
-#imgLogo {
-    width: 110px;
+    #imgLogo {
+    width: 211px;
     float: left;
     margin-top: 1%;
-    margin-left: 2%;
-}
-
-#language{
+    margin-left: 25%;
+    }
+    
+    #language{
     float: right;
-}
+    }
+    
+    #spanPrincipal{
+    text-align: left;
+    border-left: 1px solid #ebeced;
+    padding: 24px 16px 0;
+    overflow: hidden;
+    font-size: 24px;
+    font-weight: 700;
+    }
+    
+    #spanSecondary{
+    font-size: 16px;
+    font-weight: 400;
+    display: block;
+    margin-top: 8px;
+    }
+    
+    #footer{
+    background-color: #293339;
+    color: #fff;
+    font-size: 14px;
+    margin-top: auto;
+    padding-top: 32px;
+    height: 350px;
+    }
+    
+    #footerTriv{
+    background-color: #37454d;
+    padding: 32px 5%;
+    margin-top: 0;
+    height: auto;
+    color: #fff;
+    font-size: 12px;
+    }
+    
+    #article{
+    color: #757575;
+    display: block;
+    font-size: 14px;
+    margin: 8px 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    }
+    
+    #title{
+    font-size: 28px;
+    float: left;
+    margin-left: 10%;
+    }
+    
+    #subtitle{
+    font-size: 14px;
+    font-weight : 400;
+    display: block;
+    margin-top: 5px;
+    float: left;
+    margin-left: 10%;
+    }
+    
+    #content{
+    display: unset
+    }
+    
+    
+    #content-article{
+    display: inline-flex
+    }
+    #imgMagazine{
+    width: 220px;
+    float: left;
+    margin-left: 10%;
+    
+    }
